# agentic-ai-workflow

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: testsPython.yml
app/: __version__.py
