[project]
name = "StackademyAI"
version = "0.1.7"
requires-python = ">=3.10"
description = "StackademyAI: an AI-powered marketing agent"
authors = [{ name = "Lawrence McDaniel", email = "lpm0073@gmail.com" }]
license = { file = "LICENSE" }
keywords = ["AI", "API", "Python"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU AGPL v3 or later (AGPLv3+)",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Framework :: Django",
    "Framework :: Django REST framework",
    "Topic :: Software Development :: Libraries :: Application Interfaces",
    "Topic :: Software Development :: Libraries :: API",
    "Natural Language :: English",
    "Development Status :: 4 - Beta"
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | node_modules
  | build
  | buck-out
  | build
  | dist
  | lambda_dist_pkg
)/
'''
